@@ -33,6 +33,7 @@ import java.util.UUID;
 import static java.time.OffsetDateTime.now;
 import static java.util.Collections.emptyList;
 import static java.util.Optional.empty;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.IntStream.rangeClosed;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -231,7 +232,7 @@ class TranscriptionDownloaderTest {
                 var transcriptionDocument = someTranscriptionDocumentWithUploadDate(uploadedDateTime);
                 transcriptionDocument.setExternalObjectDirectoryEntities(someExternalObjectDirectoriesCreatedAtLeast2DaysAgo(i));
                 return transcriptionDocument;
-            }).toList();
+            }).collect(toList());
     }
 
     private TranscriptionDocumentEntity someTranscriptionDocumentWithUploadDate(OffsetDateTime uploadedDateTime) {
